// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCollapsibleNav close button can be hidden 1`] = `
<div>
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        aria-describedby="generated-id"
        class="euiFlyout euiCollapsibleNav emotion-euiFlyout-none-noMaxWidth-overlay-left-left-euiCollapsibleNav-overlay"
        data-autofocus="true"
        id="id"
        role="dialog"
        style="inline-size: 320px;"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close.
           
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-fill-text-euiFlyout__closeButton-outside-left"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`EuiCollapsibleNav does not render if isOpen is false 1`] = `<div />`;

exports[`EuiCollapsibleNav is rendered 1`] = `
<div>
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        aria-describedby="generated-id"
        aria-label="aria-label"
        class="euiFlyout euiCollapsibleNav testClass1 testClass2 emotion-euiFlyout-none-noMaxWidth-overlay-left-left-euiCollapsibleNav-overlay-euiTestCss"
        data-autofocus="true"
        data-test-subj="test subject string"
        id="id"
        role="dialog"
        style="inline-size: 320px;"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close.
           
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-fill-text-euiFlyout__closeButton-outside-left"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`EuiCollapsibleNav props accepts EuiFlyout props 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
  <div
    data-focus-lock-disabled="false"
  >
    <nav
      aria-describedby="generated-id"
      class="euiFlyout euiCollapsibleNav emotion-euiFlyout-none-noMaxWidth-overlay-left-left-euiCollapsibleNav-overlay"
      data-autofocus="true"
      id="id"
      role="dialog"
      style="inline-size: 240px;"
      tabindex="0"
    >
      <p
        class="emotion-euiScreenReaderOnly"
        id="generated-id"
      >
        You are in a non-modal dialog. To close the dialog, press Escape.
         
      </p>
      <button
        aria-label="Close this dialog"
        class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-fill-text-euiFlyout__closeButton-outside-left"
        data-test-subj="euiFlyoutCloseButton"
        type="button"
      >
        <span
          aria-hidden="true"
          class="euiButtonIcon__icon"
          color="inherit"
          data-euiicon-type="cross"
        />
      </button>
    </nav>
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`EuiCollapsibleNav props button 1`] = `
<div>
  <button
    aria-controls="id"
    aria-expanded="true"
    aria-pressed="true"
  />
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        aria-describedby="generated-id"
        class="euiFlyout euiCollapsibleNav emotion-euiFlyout-none-noMaxWidth-overlay-left-left-euiCollapsibleNav-overlay"
        data-autofocus="true"
        id="id"
        role="dialog"
        style="inline-size: 320px;"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close.
           
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-fill-text-euiFlyout__closeButton-outside-left"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`EuiCollapsibleNav props dockedBreakpoint 1`] = `
<div>
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        aria-describedby="generated-id"
        class="euiFlyout euiCollapsibleNav emotion-euiFlyout-none-noMaxWidth-overlay-left-left-euiCollapsibleNav-overlay"
        data-autofocus="true"
        id="id"
        role="dialog"
        style="inline-size: 320px;"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close.
           
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-fill-text-euiFlyout__closeButton-outside-left"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`EuiCollapsibleNav props isDocked 1`] = `
<div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-lock-disabled="disabled"
  >
    <nav
      class="euiFlyout euiCollapsibleNav emotion-euiFlyout-none-noMaxWidth-push-left-noAnimation-left-euiCollapsibleNav-push"
      id="id"
      style="inline-size: 320px;"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</div>
`;

exports[`EuiCollapsibleNav props onClose 1`] = `
<div>
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        aria-describedby="generated-id"
        class="euiFlyout euiCollapsibleNav emotion-euiFlyout-none-noMaxWidth-overlay-left-left-euiCollapsibleNav-overlay"
        data-autofocus="true"
        id="id"
        role="dialog"
        style="inline-size: 320px;"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close.
           
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-fill-text-euiFlyout__closeButton-outside-left"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`EuiCollapsibleNav props showButtonIfDocked 1`] = `
<div>
  <button
    aria-controls="id"
    aria-expanded="true"
    aria-pressed="true"
  />
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
  <div
    data-focus-lock-disabled="disabled"
  >
    <nav
      class="euiFlyout euiCollapsibleNav emotion-euiFlyout-none-noMaxWidth-push-left-noAnimation-left-euiCollapsibleNav-push"
      id="id"
      style="inline-size: 320px;"
    />
  </div>
  <div
    data-focus-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="-1"
  />
</div>
`;

exports[`EuiCollapsibleNav props size 1`] = `
<div>
  <div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-focus-lock-disabled="false"
    >
      <nav
        aria-describedby="generated-id"
        class="euiFlyout euiCollapsibleNav emotion-euiFlyout-none-noMaxWidth-overlay-left-left-euiCollapsibleNav-overlay"
        data-autofocus="true"
        id="id"
        role="dialog"
        style="inline-size: 240px;"
        tabindex="0"
      >
        <p
          class="emotion-euiScreenReaderOnly"
          id="generated-id"
        >
          You are in a modal dialog. Press Escape or tap/click outside the dialog on the shadowed overlay to close.
           
        </p>
        <button
          aria-label="Close this dialog"
          class="euiButtonIcon euiFlyout__closeButton emotion-euiButtonIcon-xs-fill-text-euiFlyout__closeButton-outside-left"
          data-test-subj="euiFlyoutCloseButton"
          type="button"
        >
          <span
            aria-hidden="true"
            class="euiButtonIcon__icon"
            color="inherit"
            data-euiicon-type="cross"
          />
        </button>
      </nav>
    </div>
    <div
      data-focus-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</div>
`;
